trying to fix the drop down showing on mobile

--- a/src/packages/modules/search-results-z07/css/search-results-z07.scss
+++ b/src/packages/modules/search-results-z07/css/search-results-z07.scss
@@ -320,7 +320,8 @@
       width: 100%;
     }
   }
-  .sort-options .native-dropdown {
+  .no-touch .sort-options .native-dropdown,
+  .touch .sort-options .native-dropdown {
     display: none;
     position: relative;
     cursor: pointer;
